--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@hotwired/turbo-rails": "^7.1.3",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.1",
+    "jquery": "^3.6.1",
+    "popper.js": "^1.16.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
