--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo-rails": "^7.1.3",
     "@popperjs/core": "^2.11.6",
+    "@rails/actioncable": "^7.0.4",
     "bootstrap": "^5.2.1",
     "jquery": "^3.6.1",
     "popper.js": "^1.16.1",
